openidc-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: openidc
  namespace: kube-system
  labels:
    name: openidc
spec:
  ports:
    # the port that this service should serve on
    - name: https
      port: 443
  # label keys and values that must match in order to receive traffic for this service
  selector:
    pool: openidcpool
